# AGS-Python-fork

./: .gitlab-ci.yml  setup.cfg
python_ags4/: AGS4.py  get-json-from-index-ags.py
tests/: test_abbr.ags  test_abbr.json  test_ags4.py  test_dict.ags  test_dict.json
