[metadata]
name = "python-AGS4"
version = v-latest
author = Asitha Senanayake
author_email = asitha_sena@yahoo.com
description = "A library to read, write, and check AGS4 files using Pandas DataFrames"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/ags-data-format-wg/ags-python-library
project_urls =
    Bug Tracker = https://gitlab.com/ags-data-format-wg/ags-python-library/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: LGPL-3.0
    Operating System :: OS Independent

[options]
package_dir =
    = python_ags4
packages = find:
python_requires = >=3.7

[options.packages.find]
where = python_ags4



